<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="P11_Rx_TV" Id="{1bdaa6b9-6fb4-4f5d-9710-f2de88858337}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P11_Rx_TV
VAR
	Resolution: REAL := 32767;//0~7FFF	
	Resolution_CDG: REAL := 24576;//0~6000h
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//Throttle Valve
pv_POS := WORD_TO_REAL(Rx_TV_POS) * N_MAX[28] / Resolution; //TV POS
pv_P01 := WORD_TO_REAL(Rx_TV_CDG1) * N_MAX[29] / Resolution_CDG;//P01

//OP 상태 표시 
ing_TV_presCtrl := (Rx_TV_ST = 0);
ing_TV_posCtrl := (Rx_TV_ST = 1);
is_TV_open := (Rx_TV_ST = 2);
is_TV_init_X := (Rx_TV_ST = 3);
is_TV_close := (Rx_TV_ST = 4);
is_TV_fail := (Rx_TV_ST = 5);
ing_TV_init := (Rx_TV_ST = 6);
is_TV_stop := Tx_TV_Mode <> 0 AND (Rx_TV_ST = 8);
is_TV_run := Tx_TV_Mode = 0;//ing_TV_presCtrl OR ing_TV_posCtrl;
 ]]></ST>
    </Implementation>
    <LineIds Name="P11_Rx_TV">
      <LineId Id="11" Count="13" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>