<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="P12_Rx_IH" Id="{feb25336-0957-48bd-a791-aa41255d1c70}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P12_Rx_IH
VAR
	r1: REAL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//Induction Heater Controller : E3508 
r1 := WORD_TO_REAL(Rx_IH_PV);

pv_IH := r1 / 10;

r1 := WORD_TO_REAL(Rx_IH_MOUT);
pv_IH_KW := r1 / 10; 

is_IH_TIC_al := Rx_IH_AL > 0;
is_IH_TIC_manual := Rx_IH_AM > 0;
ing_IH_TIC_at := Rx_IH_AT_ST <> 0;

r1 := WORD_TO_REAL(Rx_IH_P);
pv_IH_P := r1 / 10; 

r1 := WORD_TO_REAL(Rx_IH_I);
pv_IH_I := r1 / 10; 

r1 := WORD_TO_REAL(Rx_IH_D);
pv_IH_D := r1 / 10; ]]></ST>
    </Implementation>
    <LineIds Name="P12_Rx_IH">
      <LineId Id="10" Count="18" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>