<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="Task_Fast_LH" Id="{ab6dda3b-0a47-4111-b8b1-d0e9962ed5db}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM Task_Fast_LH
VAR
	//LineHeater Controller(MC9-8RD0SS32) x 1EA
	(* background communication with the KL6031 terminal (22byte) *)
	fbCtrl: SerialLineControl;
	bCtrlError: BOOL;
	eCtrlErrorID: ComError_t;
	fbKLConfig: KL6configuration;
	bKLConfigError: BOOL;
	eKLConfigErrorID: ComError_t;
	bKLConfigExe: BOOL := TRUE;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//LH: Line Heater x 8EA -> 8Channel TIC 1EA
//Maker: HANYOUNG NUX
//Model: MC9-8RD0SS32
//Temp Range: -15 ~200℃
//RS485: 9600, DataBit(8), Parity(None), StopBit(1)
//BCC Check X
fbCtrl(
	Mode:= SERIALLINEMODE_KL6_22B_STANDARD,
	pComIn:= ADR(in22B_LH),
	pComOut:= ADR(out22B_LH),
	SizeComIn:= SIZEOF(in22B_LH),
	Error=> ,
	ErrorID=> ,
	TxBuffer:= TxBuf_LH,
	RxBuffer:= RxBuf_LH );
IF fbCtrl.Error THEN
	bCtrlError := TRUE;
	eCtrlErrorID := fbCtrl.ErrorID;
END_IF
]]></ST>
    </Implementation>
    <LineIds Name="Task_Fast_LH">
      <LineId Id="18" Count="18" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>