<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="Task_Fast_TB" Id="{8289880a-7eb2-44a4-ba93-12ec3ee8d950}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM Task_Fast_TB
VAR
	//Thermal Bath(HEBC002-WA10) x 6EA
	(* background communication with the KL6031 terminal (22byte) *)
	fbCtrl: SerialLineControl;
	bCtrlError: BOOL;
	eCtrlErrorID: ComError_t;
	fbKLConfig: KL6configuration;
	bKLConfigError: BOOL;
	eKLConfigErrorID: ComError_t;
	bKLConfigExe: BOOL := TRUE;	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//TB: Thermal Bath x 6EA
//Maker: SMC
//Model: HEBC002-WA10
//Temp Range: -15 ~60℃
//RS485: 9600, DataBit(8), Parity(None), StopBit(1)
//BCC Check X
fbCtrl(
	Mode:= SERIALLINEMODE_KL6_22B_STANDARD,
	pComIn:= ADR(in22B_TB),
	pComOut:= ADR(out22B_TB),
	SizeComIn:= SIZEOF(in22B_TB),
	Error=> ,
	ErrorID=> ,
	TxBuffer:= TxBuf_TB,
	RxBuffer:= RxBuf_TB );
IF fbCtrl.Error THEN
	bCtrlError := TRUE;
	eCtrlErrorID := fbCtrl.ErrorID;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="Task_Fast_TB">
      <LineId Id="18" Count="17" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>